--- a/applications/primo/styles-imports/_advanced-search-tile.scss
+++ b/applications/primo/styles-imports/_advanced-search-tile.scss
@@ -105,7 +105,7 @@
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 720px) {
 
   #exlidAdvancedSearchTile {
     #exlidAdvancedSearchRibbon {
@@ -136,7 +136,7 @@
       //keywords filter
       input,
       select {
-        width: 78vw;
+        width: 81vw;
         margin: 5px auto;
       }
 
